examples/bad/auto_return8.latf
auto f() {
    if (true) {
        return 0;
    }
    else {
        while (true) {
            return 1;
        }
        // error - it's possible (without knowing the bool condition values) that the function with auto return type returns nothing
    }
}

int main() {
    return 0;
}